--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-  background-color: #0f172a;
-  color: white;
+  background-color: #f8fafc;
+  color: #1f2937;
 }
 
 html {
